--- a/public_html/practice_1/practice_1.html
+++ b/public_html/practice_1/practice_1.html
@@ -9,6 +9,6 @@ and open the template in the editor.
         <title>Practice_1 page</title>
     </head>
     <body>
-        <img src="https://msreview.net/uploads/posts/2018-11/1542229279_windowslight.jpg" alt = "Default windows wallpaper">
+        <img src="1542229279_windowslight.jpg" alt = "Default windows wallpaper">
     </body>
 </html>
