--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
@@ -6,11 +7,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TOD supply a title</title>
+        <title>Landing page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TDO write content</div>
-    </body>
-</html>
+        <div>Some content11</div>
+        <a href="courseWork/coursework.html">Course work link</a>
+        <a href="practice1/practice1.html">Practice_1 link</a>
+    </body> 
+</html> 
