--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,6 +14,6 @@ and open the template in the editor.
     <body>
         <div>Some content11</div>
         <a href="courseWork/coursework.html">Course work link</a>
-        <a href="practice1/practice1.html">Practice_1 link</a>
+        <a href="practice_1/practice_1.html">Practice_1 link</a>
     </body> 
 </html> 
