--- a/public_html/practice_1/practice_1.html
+++ b/public_html/practice_1/practice_1.html
@@ -10,7 +10,7 @@ and open the template in the editor.
     </head>
     <body>
         <img src="img.jpg" alt = "Default windows wallpaper">
-        <a href="../coursework.html">Course work link</a>
+        <a href="./coursework.html">Course work link</a>
         <a href="../index.html">index.html link</a>
     </body>
 </html>
