--- a/public_html/practice_2/cvHtml.html
+++ b/public_html/practice_2/cvHtml.html
@@ -23,7 +23,7 @@ and open the template in the editor.
                 and reduce costs.</div> 
             <div>
                 <a href="practice2.html">
-                    <img src="https://www.imgonline.com.ua/examples/random-pixels-big.png" alt=""/>
+                    <img src="blob:https://web.telegram.org/f8d9e9e3-a572-410f-8378-0fe192ab0091" alt=""/>
                 </a>
             </div>
 
