--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,5 +15,6 @@ and open the template in the editor.
         <div>Some content11</div>
         <a href="courseWork/coursework.html">Course work link</a>
         <a href="practice_1/practice_1.html">Practice_1 link</a>
+        <a href="practice_1/cvHtml.html">Practice_2 link</a>
     </body> 
 </html> 
