--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,9 +12,11 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Some content11</div>
+        <div>
         <a href="courseWork/coursework.html">Course work link</a>
         <a href="practice_1/practice_1.html">Practice_1 link</a>
         <a href="practice_2/cvHtml.html">Practice_2 link</a>
+        <a href="practice_3/practice3.html">Practice_1 link</a>
+        </div>
     </body> 
 </html> 
