--- a/public_html/practice_3/cvHtmlCss.html
+++ b/public_html/practice_3/cvHtmlCss.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>CVhtml</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div>
