--- a/public_html/practice_3/cvHtmlCss.html
+++ b/public_html/practice_3/cvHtmlCss.html
@@ -1,28 +1,22 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>CVhtml</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link href="css/styleP3.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>
-            <h1>Nikita <span>Sitar</span></h1>
+        <div class="header1">
+             <h1>Nikita <span>Sitar</span></h1>
             <p>+380932781744</p>
             <p>nikita_sitar@ukr.net</p>
         </div>
-        <div>
-            <div><b>Junior Frontend Developer</b> equipped with extensive experience in automotive sales management. 
+        <div class ="block1">
+            <div class="subblock1 col-7" ><b>Junior Frontend Developer</b> equipped with extensive experience in automotive sales management. 
                 Employs excellent leadership skills and multi-tasking strengths. 
                 Demonstrated ability to improve store operations, increase top line sales, 
                 and reduce costs.</div> 
-            <div>
+            <div class="foto1 col-4">
                 <a href="practice2.html">
                     <img src="img.png" alt=""/>
                 </a>
@@ -30,29 +24,23 @@ and open the template in the editor.
 
         </div>
 
-        <div>
+        <div class="block2 col-7">
             <div><h2>Experience</h2></div> 
             <div>
+                <p class="textalignright1">09/2015 to 05/2019</p>
                 <p>09/2015 to 05/2019</p>
                 <h3>Junior Frontend Developer</h3>
                 <p>ThinkEmpire</p>
-                <ul>
-                    <li>Accomplished the development of the company's German website, using Angular</li>
-                    <li>Typescript, NGRX and ngx-translate</li>
-                    <li>Automated system deployment with Docker, Nginx on Amazon Cloud.</li>
-                </ul>
             </div>
-            
-
-        </div>
-        <div>
+         </div>
+        <div class="block3 col-4">
             <div><h2>Skills</h2></div>
             <div>
                 <ul>
-                    <li> Javascript/ES5/ES6 ⭐⭐⭐ ⭐</li>
+                    <<li> Javascript/ES5/ES6 ⭐⭐⭐ ⭐</li>
                     <li>Angular + NGRX ⭐⭐⭐⭐</li>
                     <li>HTML/CSS3 ⭐⭐</li>
-                    <li>Bootstrap/JQUERY ⭐⭐⭐⭐</li>                  
+                    <li>Bootstrap/JQUERY ⭐⭐⭐⭐</li>     
                 </ul>
                 
 
