--- a/public_html/practice_3/cvHtmlCss.html
+++ b/public_html/practice_3/cvHtmlCss.html
@@ -35,7 +35,7 @@
                 <p>ThinkEmpire</p>
             </div>
          </div>
-        <div class="block3 col-4">
+        <div class="block2">
             <div><h2>Skills</h2></div>
             <div>
                 <ul>
