--- a/public_html/practice_3/cvHtmlCss.html
+++ b/public_html/practice_3/cvHtmlCss.html
@@ -26,7 +26,7 @@
 
         </div>
 
-        <div class="block2 col-7">
+        <div class="block2">
             <div><h2>Experience</h2></div> 
             <div>
                 <h3>Junior Frontend Developer</h3>
