--- a/public_html/practice_3/cvHtmlCss.html
+++ b/public_html/practice_3/cvHtmlCss.html
@@ -27,6 +27,8 @@
         </div>
 
         <div class="block2">
+            <h2>Education</h2>
+            <p>Taras Shevchenko National University of Kyiv</p>
             <h2>Experience</h2>
             
                 <h3>Junior Frontend Developer</h3>
