--- a/public_html/practice_3/cvHtmlCss.html
+++ b/public_html/practice_3/cvHtmlCss.html
@@ -28,7 +28,7 @@
 
         <div class="block2">
             <h2>Education</h2>
-            <p>Taras Shevchenko National University of Kyiv</p>
+            <h3>Taras Shevchenko National University of Kyiv</h3>
             <h2>Experience</h2>
             
                 <h3>Junior Frontend Developer</h3>
