--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <script src="js/ajax-utils.js"></script>
-        <script src="js/script.js"></script>
-        <script src="js/script_1.js" type="text/javascript"></script>
+        
+        <script src="js/scriptBTN1.js"></script>
+    
     </head>
     <body>
         <p>
