--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         
         <script src="js/scriptBTN1.js"></script>
+        <script src="js/ajax-utils.js"></script>
     
     </head>
     <body>
