--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -5,7 +5,8 @@
         
         <script src="js/scriptBTN1.js"></script>
         <script src="js/ajax-utils.js"></script>
-    
+        <script src="js/script2.js"></script>
+   
     </head>
     <body>
         <p>
