--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -11,12 +11,12 @@
     <body>
         <p>
             <button class = 'button1'>
-                BTN1
+                Button1
             </button>         
         </p>
         <p>
             <button class = 'button2'>
-                BTN2
+                Button2
             </button>
         </p>
         <div id="content"></div>       
