--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -9,6 +9,20 @@
    
     </head>
     <body>
+        <select>
+            <option>User 1</option>
+            <option>User 2</option>
+            <option>User 3</option>
+            <option>User 4</option>
+            <option>User 5</option>
+            <option>User 6</option>
+            <option>User 7</option>
+            <option>User 8</option>
+            <option>User 9</option>
+            <option>User 10</option>
+            <option>User 11</option>
+            <option>User 12</option>
+        </select>
         <p>
             <button class = 'button1'>
                 Button1
