--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -6,7 +6,7 @@
         <script src="js/scriptBTN1.js"></script>
         <script src="js/ajax-utils.js"></script>
         <script src="js/script2.js" type="text/javascript"></script>
-   
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     </head>
     <body>
         <select>
