--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -23,12 +23,12 @@
             <option>User 12</option>
         </select>
         <p>
-            <button class = 'button1'>
+            <button class = 'button1' id="button1">
                 Button1
             </button>         
         </p>
         <p>
-            <button class = 'button2'>
+            <button class = 'button2' id="button2">
                 Button2
             </button>
         </p>
