--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <select>
-            <option>User 1</option>
+            <option>Test 1</option>
             <option>User 2</option>
             <option>User 3</option>
             <option>User 4</option>
