--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -10,7 +10,7 @@
     <body>
         <select>
             <option>Test 1</option>
-            <option>User 2</option>
+            <option>Test 2</option>
             <option>User 3</option>
             <option>User 4</option>
             <option>User 5</option>
