--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -8,6 +8,11 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     </head>
     <body>
+        <p><b>Какое у вас состояние разума?</b></p>
+    <p><input name="dzen" type="radio" value="nedzen"> Не дзен</p>
+    <p><input name="dzen" type="radio" value="dzen"> Дзен</p>
+    <p><input name="dzen" type="radio" value="pdzen" checked> Полный дзен</p>
+    <p><input type="submit" value="Выбрать"></p>
         <select>
             <option>User 1</option>
             <option>Test 2</option>
