--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -8,7 +8,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     </head>
     <body>
-        <p><b>test</b></p>
+        <p><b>test1</b></p>
     <p><input name="dzen" type="radio" value="nedzen"> 1</p>
     <p><input name="dzen" type="radio" value="dzen"> 2</p>
     <p><input name="dzen" type="radio" value="pdzen" checked> 3</p>
