--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -34,7 +34,7 @@
             </div>
         <div class="header1">
             
-             <h1>Nikita <span>Sitar</span></h1>
+             <h1>Nikita Sitar</h1>
             <div class="foto1 col-4">
                    <img src="img.png" alt=""/>
             <p>+380932781744</p>
