--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -7,6 +7,7 @@
         <script src="js/script2.js" type="text/javascript"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <link href="style.css" rel="stylesheet" type="text/css"/>
+        <script src="js/script3.js" ></script>
     </head>
     <body>
         <p><b>test1</b></p>
