--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -15,6 +15,11 @@
     <p><input name="dzen" type="radio" value="dzen"> 2</p>
     <p><input name="dzen" type="radio" value="pdzen" checked> 3</p>
     <p><input type="submit" value="Выбрать"></p>
+        <SELECT id="city" onChange="CityChange()">
+    <OPTION value="city_1">Москва</option>
+    <OPTION value="city_2">Киев</option>
+    <OPTION value="city_3">Минск</option>
+</SELECT>
       
         <p>
             <button class = 'button1' id="button1">
