--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -34,7 +34,7 @@
         
                 </a>
             </div>
-        <div class="header1">
+        <div class="header1" id = "header1">
             
              <h1>Nikita Sitar</h1>
             <div class="foto1 col-4">
