--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
        
-    <SELECT id="city" onChange="CityChange()">
+    <SELECT id="city">
     <OPTION value="city_1">Москва</option>
     <OPTION value="city_2">Киев</option>
     <OPTION value="city_3">Минск</option>
