--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -12,11 +12,11 @@
     </head>
     <body>
        
-    <SELECT id="city">
-    <OPTION value="city_1">Москва</option>
-    <OPTION value="city_2">Киев</option>
-    <OPTION value="city_3">Минск</option>
-    </SELECT>
+    <select id="city">
+    <option value="city_1">Москва</option>
+    <option value="city_2">Киев</option>
+    <option value="city_3">Минск</option>
+    </select>
       
         <p>
             <button class = 'button1' id="button1">
