--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -11,11 +11,14 @@
     </head>
      <body>
        
-    <select id="city">
-    <option value="city_1">Москва</option>
-    <option value="city_2">Киев</option>
-    <option value="city_3">Минск</option>
+    <form name="selectBox">
+     <select name="actSelect">
+    <option value="1">Label1</option>
+    <option value="2">Label2</option>
+    <option value="3">Label3</option>
+    <option value="4">Label4</option>
     </select>
+    </form>
       
         <p>
             <button class = 'button1' id="button1">
