--- a/public_html/practice6/index.html
+++ b/public_html/practice6/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <meta charset="utf-8 ">
-        <script src="js/script1.js"></script>
+        <script src="js/script.js"></script>
         <script src="js/ajax-utils.js"></script>       
         <link href="style.css" rel="stylesheet" type="text/css"/> 
 </head>
@@ -41,34 +41,5 @@
 
 
     </body>
-   <script>var i = 1;
-    document.addEventListener("DOMContentLoaded",
-        function (event) {
-
-        
-        document.querySelector(".header1")
-                .addEventListener("click", function () {
-
-                $ajaxUtils
-                        .sendGetRequest("https://reqres.in/api/users/"+i,
-                                function (request) {
-                                console.log(request.responseText);
-                                        var personObject = JSON.parse(request.responseText);
-                                        document.querySelector("#header1")
-                                        .innerHTML = "<h1>" + personObject.data['first_name']
-                                        + ' ' + personObject.data['last_name'] + "</h1>"+"<p>"+personObject.data['email']+"</p>"+"<img src="+personObject.data['avatar']+">";                                                                                
-                                     if(i%5==0){
-                                         document.querySelector("#header1")
-                                        .innerHTML ='<h1>Nikita Sitar</h1><p>nikita_sitar@ukr.net</p><img src="img.png" alt=""/>';
-                                      
-                                     }else if (i == 12){
-                                         document.querySelector("#header1")
-                                        .innerHTML ='<h1>Nikita Sitar</h1><p>nikita_sitar@ukr.net</p><img src="img.png" alt=""/>';
-                                         i = 1;
-                                     }                       
-                                     i=i+1;
-                                });
-                });
-        }
-);</script>
+   
 </html>
