--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>
-        <a href="courseWork/coursework.html">Course work link</a>
+        <a href="courseWork/index.html">Course work link</a>
         <a href="practice_1/practice_1.html">Practice_1 link</a>
         <a href="practice_2/cvHtml.html">Practice_2 link</a>
         <a href="practice_3/practice3.html">Practice_3 link</a>
