--- a/public_html/courseWork/top.html
+++ b/public_html/courseWork/top.html
@@ -24,8 +24,8 @@
 
 
 <h1>Top Cryptocurrencies today</h1>
-<p>There are today's top currencies below.You can see it's current,highest and lowest price.(Based on <a href="https://www.coingecko.com/api/documentations/v3#/">Coingecko API</a>)</p>
-
+<h3>There are today's top currencies below.You can see it's current,highest and lowest price.(Based on <a href="https://www.coingecko.com/api/documentations/v3#/">Coingecko API</a>)</h3>
+<div class="container">
   <div class="row">
     <div class="col">Currency</div>
     <div class="col">Current Price</div>
@@ -57,10 +57,10 @@
     <div id= "ripple_lowest_price" class="col">0$</div>
     <div id= "ripple_highest_price" class="col">0$</div>
   </div>
-
+</div>
 <h2>Here's calculator!</h2>
 
-<p>Click on currency -> Enter the value -> Get the result</p>
+<h2>Click on currency -> Enter the value -> Get the result</h2>
 
 <div class="container">
   <div class="row>
@@ -75,7 +75,7 @@
 
     <div class="input-group mb-3">
   <div class="input-group-prepend">
-    <button class="btn btn-outline-secondary" onclick="count()" type="button" id="button-addon1">Count</button>
+    <button class="btn btn-success" onclick="count()" type="button" id="button-addon1">Count</button>
   </div>
   <input type="text" id="txt" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
   <input type="text" aria-label="Last name" id="txt2" class="form-control">
@@ -88,6 +88,8 @@
 
 </body>
 <footer>
-
+<p>Copyright 2020</p>
+<p><a href="https://t.me/nekittow">Telegram</a></p>
+<p>Email : nikita_sitar@ukr.net</p>
 </footer>
 </html>
